--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "scripts": {
     "build": "tsc",
     "dev": "ts-node src/cli.ts",
+    "start": "node dist/cli.js host",
+    "start:host": "node dist/cli.js host",
     "prepublishOnly": "npm run build",
     "test": "jest",
     "lint": "eslint src/**/*.ts",
@@ -32,16 +34,24 @@
   "author": "Coinbase",
   "license": "Apache-2.0",
   "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.25.3",
     "axios": "^1.6.0",
     "chalk": "^4.1.2",
     "cli-progress": "^3.12.0",
     "commander": "^11.1.0",
+    "cookie-parser": "^1.4.7",
+    "express": "^5.2.1",
+    "express-session": "^1.19.0",
     "fs-extra": "^11.1.1",
     "inquirer": "^8.2.5",
     "semver": "^7.5.4",
-    "yauzl": "^2.10.0"
+    "yauzl": "^2.10.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.10",
+    "@types/express": "^5.0.6",
+    "@types/express-session": "^1.18.2",
     "@types/fs-extra": "^11.0.4",
     "@types/inquirer": "^8.2.5",
     "@types/jest": "^29.5.12",
